--- a/client/src/components/blog/fullblog.css
+++ b/client/src/components/blog/fullblog.css
@@ -1,8 +1,13 @@
 /* Default styles */
+.fullblog_container {
+    display: flex;
+}
+
 .fullblogcontainer {
     height: 100%;
     border: 1px solid var(--third-color);
-    margin: 5% auto; /* Center the container with 5% top and bottom margin */
+    margin: 5% auto;
+    /* Center the container with 5% top and bottom margin */
     padding: 5%;
     display: flex;
     flex-direction: column;
@@ -28,7 +33,8 @@
 }
 
 .fullimg {
-    max-width: 100%; /* Ensure the image does not exceed its container */
+    max-width: 100%;
+    /* Ensure the image does not exceed its container */
     height: auto;
 }
 
@@ -48,8 +54,8 @@
     float: right;
     margin: 15px;
 }
-.comment_section
-{
+
+.comment_section {
     display: flex;
     /* justify-content: center; */
     align-items: center;
@@ -57,114 +63,139 @@
     width: 70%;
 }
 
-.send_icon
-{
+.send_icon {
     border: 1px solid var(--primary-color);
     margin: 5px;
     padding: 5px;
 }
 
-.comments
-{
+.comments {
     border: 1px solid var(--primary-color);
     margin: 15px;
     padding: 25px;
     width: 100%;
 }
+
 .comment {
     border: 1px solid var(--primary-color);
     margin: 15px;
     padding: 25px;
     display: flex;
-    flex-direction: column; 
-     
+    flex-direction: column;
+
 }
 
 
-  .cmt_user {
+.cmt_user {
     font-size: 22px;
     margin-left: 15px;
     margin-right: 10px;
-  }
-  
-  .comment-content {
-    margin-top: 5px; 
-    margin-left: 15px;
-    display: flex;
-    
-    
 }
 
-.cmt_container
-{
+.comment-content {
+    margin-top: 5px;
+    margin-left: 15px;
+    display: flex;
+
+
+}
+
+.cmt_container {
     /* display: block; */
     /* justify-content: start; */
     margin-left: 45px;
 }
-  
-.cmt_content
-{
+
+.cmt_content {
     margin-left: 15px;
 
+}
+
+.back {
+    margin: 45px;
 }
 
 /* Media Queries for responsiveness */
 
 /* Tablets (landscape) and larger */
+@media only screen and (min-width:320px) {
+
+    .fullblog_container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .fullblogcontainer {
+        width: 70%;
+        /* Reduce container width for larger screens */
+    }
+
+    .authorname {
+        font-size: 20px;
+        /* Decrease font size for larger screens */
+    }
+
+    .fullblogcontent {
+        font-size: 18px;
+        /* Decrease font size for larger screens */
+    }
+
+    .authorinfo {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 @media only screen and (min-width: 768px) {
+
+
+    .fullblog_container {
+        display: flex;
+        flex-direction: row;
+    }
+
     .fullblogcontainer {
-        width: 70%; /* Reduce container width for larger screens */
+        width: 70%;
+        /* Reduce container width for larger screens */
     }
 
     .authorname {
-        font-size: 20px; /* Decrease font size for larger screens */
+        font-size: 20px;
+        /* Decrease font size for larger screens */
     }
 
     .fullblogcontent {
-        font-size: 18px; /* Decrease font size for larger screens */
+        font-size: 18px;
+        /* Decrease font size for larger screens */
     }
-    .authorinfo
-    {
+
+    .authorinfo {
         display: flex;
         flex-direction: column;
     }
 }
 
-/* Desktops and larger */
-@media only screen and (min-width: 992px) {
-    .fullblogcontainer {
-        width: 50%; /* Further reduce container width for desktops */
-    }
 
-    .authorname {
-        font-size: 18px; /* Decrease font size for desktops */
-    }
-
-    .fullblogcontent {
-        font-size: 16px; /* Decrease font size for desktops */
-    }
-    .authorinfo
-    {
-        display: flex;
-        flex-direction: column;
-    }
-}
 
 /* Large desktops and larger */
 @media only screen and (min-width: 1200px) {
+   
     .fullblogcontainer {
-        width: 40%; /* Further reduce container width for large desktops */
+        width: 40%;
+        /* Further reduce container width for large desktops */
     }
 
     .authorname {
-        font-size: 16px; /* Decrease font size for large desktops */
+        font-size: 16px;
+        /* Decrease font size for large desktops */
     }
 
     .fullblogcontent {
-        font-size: 14px; /* Decrease font size for large desktops */
+        font-size: 14px;
+        /* Decrease font size for large desktops */
     }
-    .authorinfo
-    {
+
+    .authorinfo {
         display: flex;
         flex-direction: column;
     }
