--- a/client/src/components/blog/fullblog.css
+++ b/client/src/components/blog/fullblog.css
@@ -144,6 +144,23 @@
         display: flex;
         flex-direction: column;
     }
+    .comments
+    {
+        display:flex;
+        /* font-size: 18px; */
+        width: 100%;
+        /* padding: 20px; */
+        /* margin: 15px; */
+        flex-direction: column;
+    }
+
+    .comment-content {
+       
+        display: flex;
+        width: 100%;
+        /* flex-direction: column; */
+    
+    }
 }
 
 @media only screen and (min-width: 768px) {
