--- a/client/src/components/blog/fullblog.css
+++ b/client/src/components/blog/fullblog.css
@@ -20,6 +20,11 @@
     display: flex;
     align-items: center;
     padding: 15px;
+    margin-top: -10%;
+}
+.fullblogtitle
+{
+    margin-bottom: 15px;
 }
 
 .authorname {
@@ -36,6 +41,7 @@
     max-width: 100%;
     /* Ensure the image does not exceed its container */
     height: auto;
+    border-radius: 15px;
 }
 
 .fullblogcontent {
@@ -74,6 +80,7 @@
     margin: 15px;
     padding: 25px;
     width: 100%;
+    border-radius: 15px;
 }
 
 .comment {
@@ -82,10 +89,14 @@
     padding: 25px;
     display: flex;
     flex-direction: column;
-
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
-
+.comment:hover {
+  transition: 0.5s;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
 .cmt_user {
     font-size: 22px;
     margin-left: 15px;
