--- a/client/src/components/blog/blog.css
+++ b/client/src/components/blog/blog.css
@@ -1,6 +1,6 @@
 .blogcontainer
 {
-    background: var(--forth-color);
+    background-color: var(--forth-color);
     /* background: var(--forth-color); */
     
 }
