--- a/client/src/components/Admin/sidebar.css
+++ b/client/src/components/Admin/sidebar.css
@@ -10,7 +10,7 @@
   }
   
   .sidebar h2 {
-    color: #fff;
+    color: var(--font-color);
     text-align: center;
     margin:15px;
     margin-bottom: 20px;
@@ -29,7 +29,7 @@
   }
   
   .sidebar ul li a {
-    color: #fff;
+    color: var(--font-color);
     text-decoration: none;
     display: block;
     font-size: 20px;
@@ -37,6 +37,12 @@
     padding: 5px;
   }
   
+  .sidebar ul li a:hover {
+    /* background-color: var(--third-color); */
+    color: var(--forth-color);
+    border-radius: 15px;
+   transition: 0.7s;
+  }
   /* Main content area */
   .main-content {
     margin-left: 250px; /* Adjust based on sidebar width */
