--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,28 +10,18 @@ body{
 
 :root {
 
-    --primary-color: #222831; 
-    --secondary-color: #393E46;
+    /* --primary-color: #222831;  */
+    /* --secondary-color: #393E46; */
 
     --third-color : #59E4A8;
-    /* --forth-color:#EEEEEE; */
-    --forth-color:#f0f0f0;
-    --text-color : #000000;
+     --forth-color:#EDE6DB;
+     /* --forth-color:#dcd8d8; */
+     --font-color:#ffffff;
 
-
-
-
-
-
-
-
-
-
-/* 
-    --primary-color: #1A3C40; 
-    --secondary-color: #1D5C63;
-
-    --third-color : #59E4A8;
-    --forth-color:#EDE6DB;
-    --text-color : #000000; */
+    --primary-color:#1A1A1E;
+     --secondary-color: #4e4e50;
+    /*--third-color : #59E4A8;
+    --forth-color : #6F2232;
+    --forth-color:#950740;
+    --text-color : #C3073F; */
   }
