--- a/client/src/components/blog/post.css
+++ b/client/src/components/blog/post.css
@@ -1,7 +1,7 @@
 /* Global CSS rule to remove underline from all Link components */
 .blogcontent,.postuserinfo{
     text-decoration: none !important;
-    color: inherit; /* Optional: ensure links inherit their parent's color */
+    color: inherit;
 }
 .maincontainer
 {
@@ -105,9 +105,11 @@
 
 .post_like
 {
-    margin-right: 100%;
-    margin: 5px;
-    /* display: flex; */
+    /* margin-right: 100%; */
+    /* margin: 5px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .post_likeinfo
 {
@@ -115,8 +117,22 @@
 }
 .post_cmt
 {
-    margin-left: 100%;
-    margin: 44px;
+    /* margin-left: 100%; */
+    /* margin: 0px 42px;  */
+    text-decoration: none;
+    margin: 15px;
+    color: var(--primary-color);
+    /* margin-right: 10%; */
+    /* padding: 15px; */
+}
+.like_cmt
+{
+    display: flex;
+    /* margin: 15px; */
+    padding: 15px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 
