process till internal exam

--- a/client/src/components/blog/fullblog.css
+++ b/client/src/components/blog/fullblog.css
@@ -124,9 +124,7 @@
 
 .back {
     margin: 45px;
-}
-
-.blog_cmt
+}.blog_cmt
 {
     display: flex;
     margin: 15px;
@@ -178,18 +176,12 @@
         /* flex-direction: column; */
     
     }
-     .comment {
-    margin: 10px;
-    padding: 15px;
-  }
 
-  .cmt_user {
-    font-size: 18px;
-  }
-
-  .cmt_content {
-    font-size: 16px;
-  }
+    .cmt_time
+    {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 @media only screen and (min-width: 768px) {
@@ -219,19 +211,6 @@
         display: flex;
         flex-direction: column;
     }
-    
-  .comment {
-    margin: 15px;
-    padding: 20px;
-  }
-
-  .cmt_user {
-    font-size: 20px;
-  }
-
-  .cmt_content {
-    font-size: 18px;
-  }
 }
 
 
@@ -258,18 +237,4 @@
         display: flex;
         flex-direction: column;
     }
-
-    .comment {
-        margin: 20px;
-        padding: 25px;
-      }
-    
-      .cmt_user {
-        font-size: 22px;
-      }
-    
-      .cmt_content {
-        font-size: 20px;
-      }
-    
 }
