--- a/client/src/components/blog/famous.css
+++ b/client/src/components/blog/famous.css
@@ -1,49 +1,32 @@
 .pop_img {
     height: 600px;
     filter: blur(4px);
-    margin: -10px  -10px;
+    margin: -10px -10px;
     border-radius: 15px;
-   
 }
-/*  .pop_img::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50%; 
-    background: linear-gradient(to bottom, rgba(0, 0, 10, 0.9) 0%, rgba(0, 0, 0, 0.8) 100%);
-} */
-
-/* .darker {
-    width: 100%;
-} */
 
 .pop_content {
     color: var(--font-color);
 }
 
-
-/* img {
-    
-    max-width: 100%;
-  } */
-  
-  .img-gradient {
-    /* max-width: 100%;  */
+.img-gradient {
     width: 100%;
-    /* margin: auto; */
-  }
-  
-  .img-gradient::after {
+}
+
+.img-gradient::after {
     display: block;
     position: relative;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
-    /* Adjust the opacity value (0.7) to make it darker or lighter */
     margin-top: -150px;
     height: 150px;
     width: 100%;
     content: '';
-  }
-  
-  
+}
+
+/* Media Query for smaller screens */
+@media (max-width: 768px) {
+    .pop_img {
+        filter: blur(2px);
+        height: 400px; /* Adjust height for smaller screens */
+    }
+}
