--- a/client/src/components/layouts/dashboard.css
+++ b/client/src/components/layouts/dashboard.css
@@ -25,7 +25,7 @@
 {
     display: flex;
     flex-direction: column;
-    margin: 30px 60px;
+    margin: 10px 5px;
     border: 1px solid;
     height: 130px;
     border-radius: 15px;
@@ -43,9 +43,9 @@ width: 250px;
 .top_dashboard p
 {
     border-radius: 15px; 
-    /* border: 1px solid; */
-    /* margin: 20px 0px; */
     padding: 15px;
+    margin-top: -25px;
+    /* margin:  0px; */
 
 /* width: 250px; */
 /* height: 100px; */
@@ -83,6 +83,7 @@ width: 250px;
 {
     display: flex;
     flex-direction: column;
+    margin: 0px 15px;
     
 }
 
@@ -100,3 +101,26 @@ width: 250px;
     /* margin: 15px; */
     /* padding: 15px; */
 }
+
+@media screen and (max-width: 768px) {
+    /* Set flex direction to column for all flex containers */
+    .chart,
+    .dashboard_admin,
+    .admin_info,
+    .adminblog_info,
+    .admin_role {
+      flex-direction: column;
+      align-items: center; /* Center align items */
+    }
+  
+    .top_dashboard {
+      width: 90%; /* Reduce width to fit smaller screens */
+    }
+  
+    .top_dashboard h3,
+    .top_dashboard p {
+      width: auto; /* Set width to auto for better responsiveness */
+      text-align: center; /* Center align text */
+    }
+  }
+  
