some data add ons and ui changes(like)

--- a/client/src/components/layouts/dashboard.css
+++ b/client/src/components/layouts/dashboard.css
@@ -29,7 +29,7 @@
     border: 1px solid;
     height: 130px;
     border-radius: 15px;
-
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 
 }
 .top_dashboard h3
