--- a/client/src/components/blog/fullblog.css
+++ b/client/src/components/blog/fullblog.css
@@ -130,6 +130,13 @@
     margin: 15px;
 }
 
+
+.back_btn
+{
+    display: flex;
+    margin-left: -400px;
+    /* float: left; */
+}
 /* Media Queries for responsiveness */
 
 /* Tablets (landscape) and larger */
