--- a/client/src/components/blog/post.css
+++ b/client/src/components/blog/post.css
@@ -73,7 +73,9 @@
 
 .postuserinfo .blogdate {
     margin-top: 5px;
-    font-size: 16px;
+    font-size: 14px;
+    color: var(--secondary-color);
+    float: right;
 }
 
 .content {
