--- a/client/src/components/blog/post.css
+++ b/client/src/components/blog/post.css
@@ -137,6 +137,13 @@
     align-content: center;
 }
 
+.admin-title
+{
+    font-size: 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 @media screen and (max-width: 768px) {
    
