--- a/src/components/blog/fullblog.css
+++ b/src/components/blog/fullblog.css
@@ -107,8 +107,6 @@
     margin-top: 5px;
     margin-left: 15px;
     display: flex;
-
-
 }
 
 .cmt_container {
@@ -189,6 +187,21 @@
         display: flex;
         flex-direction: column;
     }
+
+    .back_btn
+{
+    /* display: flex; */
+    margin-left: -100px;
+    /* float: left; */
+}
+
+
+
+.cmt_container {
+    display: block;
+    justify-content: start;
+    margin-left: 0px;
+}
 }
 
 @media only screen and (min-width: 768px) {
@@ -227,21 +240,28 @@
    
     .fullblogcontainer {
         width: 40%;
-        /* Further reduce container width for large desktops */
+        
     }
 
     .authorname {
         font-size: 16px;
-        /* Decrease font size for large desktops */
+      
     }
 
     .fullblogcontent {
         font-size: 14px;
-        /* Decrease font size for large desktops */
+        
     }
 
     .authorinfo {
         display: flex;
         flex-direction: column;
+    }
+
+    .back_btn
+    {
+        /* display: flex; */
+        margin-left: -400px;
+        /* float: left; */
     }
 }
