--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,23 @@ body{
 
 :root {
 
-    /* --primary-color: #222831;  */
-    /* --secondary-color: #393E46; */
+    /* --primary-color: #003C43;  */
+    /* --secondary-color: #135D66; */
 
     --third-color : #59E4A8;
-     --forth-color:#EDE6DB;
+     --forth-color:#E3FEF7;
      /* --forth-color:#dcd8d8; */
      --font-color:#ffffff;
+     --primary-color:#1A1A1E;
 
-    --primary-color:#1A1A1E;
-     --secondary-color: #4e4e50;
+    /* --primary-color:#354259; */
+     /* --secondary-color: #CDC2AE; */
+    /* --third-color : #59E4A8;
+     --forth-color:#EDE6DB;
+     /* --forth-color:#dcd8d8; */
+     /* --font-color:#ffffff;
+
+      */ 
+      --secondary-color: #4e4e50;
     
   }
