--- a/src/components/blog/famous.css
+++ b/src/components/blog/famous.css
@@ -1,32 +1,52 @@
+.popular_container
+{
+    background-color: var(--forth-color);
+}
+.pop_Carousel
+{
+    display: flex;
+    margin: auto;
+    width: 100%;
+}
 .pop_img {
+    display: flex;
+    margin: auto;
+    margin-left: 15px;
+    width: 100%;
     height: 600px;
-    filter: blur(4px);
-    margin: -10px -10px;
+    /* margin: -10px; */
+    object-fit: cover;
+    /* filter: blur(1px); */
     border-radius: 15px;
-}
+  }
 
-.pop_content {
-    color: var(--font-color);
-}
-
-.img-gradient {
+  
+  .img-gradient {
+    /* position:relative; */
     width: 100%;
-}
-
-.img-gradient::after {
-    display: block;
-    position: relative;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
-    margin-top: -150px;
-    height: 150px;
-    width: 100%;
+    /* height: 600px; */
+    /* margin: 0px -25px; */
+    margin-left: -25px;
+    /* object-fit: cover; */
+  }
+  
+  .img-gradient::after {
     content: '';
-}
+    position: absolute;
 
-/* Media Query for smaller screens */
-@media (max-width: 768px) {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* padding: 20px; */
+    /* background: antiquewhite; */
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
+  }
+  
+  @media (max-width: 768px) {
     .pop_img {
-        filter: blur(2px);
-        height: 400px; /* Adjust height for smaller screens */
+      filter: blur(2px);
+      height: 400px; /* Adjust height for smaller screens */
     }
-}
+  }
+  
