--- a/src/components/blog/fullblog.css
+++ b/src/components/blog/fullblog.css
@@ -1,6 +1,7 @@
 /* Default styles */
 .fullblog_container {
     display: flex;
+    background-color: var(--forth-color);
 }
 
 .fullblogcontainer {
@@ -14,6 +15,7 @@
     align-items: center;
     width: 60%;
     border-radius: 15px;
+    background-color: var(--font-color);
 }
 
 .authorinfo {
