--- a/src/components/blog/post.css
+++ b/src/components/blog/post.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px; */
-    transition:  transform 0.7s ease; 
+    transition:  transform 0.3s ease-in; 
     overflow: hidden;
     max-width: 100%; 
 }
@@ -33,7 +33,7 @@
 
     margin: 15px;
     box-shadow:var(--forth-color) 0px 20px 40px, rgba(0, 0, 0, 0.27) 0px 15px 15px;
-    transform: scale(1.07);
+    transform: scale(1.070);
 }
 
 
