--- a/src/components/layouts/dashboard.css
+++ b/src/components/layouts/dashboard.css
@@ -23,12 +23,18 @@
 }
 .top_dashboard
 {
+    background-color: var(--font-color);
     display: flex;
     flex-direction: column;
     margin: 10px 5px;
     border: 1px solid;
     height: 130px;
     border-radius: 15px;
+    /* box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px; */
+
+}
+.top_dashboard:hover
+{
     box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 
 }
@@ -57,7 +63,14 @@ width: 250px;
     padding: 20px;
     margin-bottom: 50px;
 }
-
+.dashboard
+{
+    background-color: var(--forth-color);
+    height: 100%;
+    width: 100%;
+    padding: 15px;
+    border-radius: 15px;
+}
 .dashboard_admin
 {
     border: 1px solid;
@@ -68,8 +81,9 @@ width: 250px;
     width: 50%;
     display: flex;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 25px;
     margin-bottom: 50px;
+    background-color: var(--font-color);
 }
 .admin_pic
 {
@@ -83,7 +97,7 @@ width: 250px;
 {
     display: flex;
     flex-direction: column;
-    margin: 0px 15px;
+    /* margin: 0px 15px; */
     
 }
 
