--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -112,6 +112,8 @@
     margin: 15px;
 }
 
+
+
 /* Media Queries for responsiveness */
 
 /* Adjustments for tablets */
@@ -187,6 +189,13 @@
     .left_search {
         max-width: 100%;
         /* Occupy full width */
+    }
+
+    .search_result {
+        display: flex;
+        flex-direction: column;
+        font-size: 12px;
+       width: 100%;
     }
 }
 
