--- a/src/components/blog/fullblog.css
+++ b/src/components/blog/fullblog.css
@@ -24,8 +24,8 @@
     padding: 15px;
     margin-top: -10%;
 }
-.fullblogtitle
-{
+
+.fullblogtitle {
     margin-bottom: 15px;
 }
 
@@ -71,75 +71,71 @@
     width: 70%;
 }
 
-.send_icon {
-    border: 1px solid var(--primary-color);
-    margin: 5px;
-    padding: 5px;
-}
-
-.comments {
-    border: 1px solid var(--primary-color);
-    margin: 15px;
-    padding: 25px;
+.comment_container
+{
+    height: 100%;
     width: 100%;
+    border: 1px solid;
     border-radius: 15px;
+    padding: 15px;
+    margin-top: 35px;
 }
-
-.comment {
+.comment_container .each_comment
+{
+   margin: 15px;
+   /* margin-top: 15px; */
+   padding: 15px;
     border: 1px solid var(--primary-color);
-    margin: 15px;
-    padding: 25px;
-    display: flex;
-    flex-direction: column;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
+}
+.comment_container .each_comment:hover
+{
+    transition: 0.5s;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
-.comment:hover {
-  transition: 0.5s;
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
-}
-.cmt_user {
-    font-size: 22px;
-    margin-left: 15px;
-    margin-right: 10px;
-}
-
-.comment-content {
-    margin-top: 5px;
-    margin-left: 15px;
+.date_delete
+{
     display: flex;
 }
 
-.cmt_container {
-    /* display: block; */
-    /* justify-content: start; */
+
+.comment_delete_icon
+{
+    margin-left: 230px;
+    margin-top: 5px;
+}
+
+.logo_username
+{
+    display: flex;
+}
+
+.comment_data
+{
+    color: var(--secondary-color);
+    margin-left: 45px;
+    margin-top: -10px;
+}
+
+.comment_content
+{
     margin-left: 45px;
 }
 
-.cmt_content {
-    margin-left: 15px;
 
+.comment_user
+{
+    margin-left : 15px;
 }
 
-.back {
-    margin: 45px;
-}.blog_cmt
+.blog_cmt
 {
     display: flex;
     margin: 15px;
 }
-
-
-.back_btn
-{
-    display: flex;
-    margin-left: -400px;
-    /* float: left; */
-}
-/* Media Queries for responsiveness */
-
-/* Tablets (landscape) and larger */
 @media only screen and (min-width:320px) {
 
     .fullblog_container {
@@ -166,43 +162,34 @@
         display: flex;
         flex-direction: column;
     }
-    .comments
-    {
-        display:flex;
-        /* font-size: 18px; */
-        width: 100%;
-        /* padding: 20px; */
-        /* margin: 15px; */
-        flex-direction: column;
+
+
+    .back_btn {
+        /* display: flex; */
+        margin-left: -100px;
+        /* float: left; */
     }
 
-    .comment-content {
-       
-        display: flex;
-        width: 100%;
-        /* flex-direction: column; */
-    
-    }
-
-    .cmt_time
-    {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .back_btn
+    .comment_delete_icon
 {
-    /* display: flex; */
-    margin-left: -100px;
-    /* float: left; */
+    margin-left: 7px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 7px;
+}
+
+.comment_content
+{
+    margin-left:15px;
 }
 
 
-
-.cmt_container {
-    display: block;
-    justify-content: start;
-    margin-left: 0px;
+.comment_data
+{
+    color: var(--secondary-color);
+    font-size: 14px;
+    margin-left: 15px;
+    margin-top: 10px;
 }
 }
 
@@ -233,26 +220,52 @@
         display: flex;
         flex-direction: column;
     }
+
+    .comment_delete_icon
+    {
+        margin-left: 220px;
+        display: flex;
+        /* flex-direction: column; */
+        margin-top: 7px;
+    }
+    .date_delete
+{
+    display: flex;
+    margin-top: -25px;
+    /* flex-direction: column; */
+}
+
+.comment_content
+{
+    margin-left: 45px;
+}
+
+.comment_data
+{
+    color: var(--secondary-color);
+    margin-left: 45px;
+    margin-top: 10px;
+}
 }
 
 
 
 /* Large desktops and larger */
 @media only screen and (min-width: 1200px) {
-   
+
     .fullblogcontainer {
         width: 40%;
-        
+
     }
 
     .authorname {
         font-size: 16px;
-      
+
     }
 
     .fullblogcontent {
         font-size: 14px;
-        
+
     }
 
     .authorinfo {
@@ -260,10 +273,40 @@
         flex-direction: column;
     }
 
-    .back_btn
-    {
+    .back_btn {
         /* display: flex; */
         margin-left: -400px;
         /* float: left; */
     }
+
+    .comment_delete_icon
+    {
+        margin-left: 200px;
+        display: flex;
+        /* flex-direction: column; */
+        margin-top: 7px;
+    }
+    .date_delete
+{
+    display: flex;
+    /* flex-direction: column; */
+}
+
+.comment_content
+{
+    margin-left: 45px;
+}
+
+.comment_data
+{
+    color: var(--secondary-color);
+    margin-left: 45px;
+    margin-top: 10px;
+}
+
+.blog_cmt
+{
+    display: flex;
+    margin: 15px;
+}
 }
