--- a/src/components/blog/fullblog.css
+++ b/src/components/blog/fullblog.css
@@ -75,25 +75,28 @@
 {
     height: 100%;
     width: 100%;
-    border: 1px solid;
+    border: 2px solid;
     border-radius: 15px;
     padding: 15px;
     margin-top: 35px;
+    background-color: var(--forth-color);
 }
 .comment_container .each_comment
 {
    margin: 15px;
    /* margin-top: 15px; */
    padding: 15px;
-    border: 1px solid var(--primary-color);
+    border: 2px solid var(--third-color);
     border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    background-color: var(--font-color);
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 
 }
 .comment_container .each_comment:hover
 {
     transition: 0.5s;
-    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+   
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 .date_delete
