profile page done

--- a/src/components/blog/post.css
+++ b/src/components/blog/post.css
@@ -73,7 +73,7 @@
 }
 
 .postuserinfo .blogdate {
-    margin-top: 5px;
+    margin-top: 7px;
     font-size: 14px;
     color: var(--secondary-color);
     float: right;
@@ -169,7 +169,7 @@
     }
 
     .postuserinfo p {
-        font-size: 16px; /* Reduce font size for user info */
+        font-size: 18px; 
     }
 
     .content {
@@ -197,5 +197,16 @@
     .post_like,
     .post_cmt {
         margin-right: 10px; /* Add space between like and comment icons */
+    }
+ 
+    .info
+{
+    /* display: flex; */
+    margin-top: 15px;
+}
+
+    .postuserinfo .blogdate {
+        margin-top: 3px;
+       
     }
 }
