--- a/src/components/blog/blogbyuser.css
+++ b/src/components/blog/blogbyuser.css
@@ -1,26 +1,29 @@
-
-.blogbyuser_container
-{
+.blogbyuser_container {
     background-color: var(--forth-color);
- padding: 35px;
-border-radius: 15px;
- border: 2px solid var(--third-color);
-}
-.blog-card {
+    padding: 15px;
+    margin-right: 150px;
+    border-radius: 15px;
+    border: 2px solid var(--third-color);
+  }
+  
+  .blog-card {
     position: relative;
     overflow: hidden;
+    border-radius: 15px;
   }
   
   .blog-card img {
-    transition: filter 0.3s ease;
+    /* transition: filter 0.3s ease; */
     width: 100%; /* Set image width to 100% */
     height: auto; /* Let the height adjust proportionally */
     object-fit: cover;
-    /* margin: 15px; */
+    /* border-radius: 15px; */
   }
   
   .blog-card:hover img {
-    filter: brightness(0.2); /* Darken the image on hover */
+    transform: scale(1.2);
+    filter: brightness(0.2); 
+    transition: 0.7s;
   }
   
   .blog-card .blog-title {
@@ -37,22 +40,29 @@ border-radius: 15px;
     color: white; /* Make the title visible in white color on hover */
   }
   
-  .blog_user
-  {
+  .blog_user {
     display: flex;
     float: right;
     margin: auto;
     font-size: 55px;
   }
-
-  .blog_user_img
-  {
+  
+  .blog_user_img {
     display: flex;
-    
-    /* margin: 15px; */
     margin-bottom: 150px;
   }
-  /* Media query for responsiveness */
+
+  .user_pfp
+  {
+    font-size: 45px;
+    margin: auto;
+    border-radius: 25px;
+    padding: 2px;
+    border: 2px solid;
+    margin-right: 15px;
+  }
+
+
   @media (max-width: 768px) {
     .blog-card {
       max-width: 300px; /* Set maximum width for blog cards */
@@ -62,5 +72,21 @@ border-radius: 15px;
     .blog-card img {
       height: 250px; /* Adjust image height for smaller screens */
     }
+  
+    .blog_user {
+      font-size: 35px; /* Reduce font size for smaller screens */
+      margin-right: 7px;
+      margin-left: 5px;
+    }
+  
+    .blog_user_img {
+      margin-bottom: 50px; /* Reduce margin for user image */
+    }
+
+    .user_pfp
+    {
+      font-size: 25px;
+    }
+    
   }
   
