--- a/src/components/blog/addpost.css
+++ b/src/components/blog/addpost.css
@@ -1,42 +1,35 @@
-.addpostcontainer
-{
-    height: auto;
+.addpostcontainer {
     display: flex;
     height: 100%;
+    width: 100%;
     background-color: var(--forth-color);
-   
-   
 }
 
-.addpostleft
-{
-    /* border: 2px solid salmon; */
+.addpostleft {
     width: 50%;
-    margin:auto;
-
+    margin: auto;
 }
-.addpostright
-{
-    /* border: 2px solid yellow; */
+
+.addpostright {
     width: 40%;
     margin: 40px;
     border: 1px solid var(--third-color);
     border-radius: 15px;
-    background : var(--font-color);
+    background: var(--font-color);
 }
-.formcontrol{
+
+.formcontrol {
     margin: 10px 20px;
     padding: 20px 30px;
     justify-content: center;
     align-content: center;
 }
-.addpostright label{
+
+.addpostright label {
     font-size: 22px;
- 
 }
 
-.leftpreview
-{
+.leftpreview {
     background: #ffffff;
     height: auto;
     width: auto;
@@ -44,7 +37,8 @@
     padding: 20px 20px;
     overflow-y: auto;
 }
-.leftpreview p{
+
+.leftpreview p {
     display: inline;
     background-color: transparent;
     color: black;
@@ -52,40 +46,35 @@
     margin-left: 40px;
     font-size: 18px;
 }
+
 .img--align-left {
     background-color: #fff;
-    float: left; /* replaces the style previously inherited by the browser */
-    margin: 10px ;
+    float: left;
+    margin: 10px;
     border-radius: 15px;
-    /* display: block; */
-     border: none;
-    outline: none;
-  }
-
+}
 
 @media only screen and (max-width: 768px) {
-    .addpostcontainer
-    {
+    .addpostcontainer {
         flex-direction: column;
     }
 
-    .leftpreview
-    {
-        margin: 0;
-        width:200px;
-        opacity: 0.5;
-      
+
+    .addpostright {
+        width: 75%;
+        margin-left: auto;
     }
 
-    .addpostright
-    {
-        width: 100%;
+    .leftpreview {
+        margin: 0;
+        width: 200px;
+        opacity: 0.5;
     }
+
     .img--align-left {
-        
         justify-content: center;
         justify-items: center;
         justify-self: center;
         border-radius: 15px;
-      }
-  }
+    }
+}
