--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -106,7 +106,7 @@ nav ul.show {
     flex-direction: column;
     align-items: center;
     display: none;
-    padding: 35px; /* Adjust padding as needed */
+    padding: 35px; 
   }
 
   nav ul.show {
@@ -128,16 +128,12 @@ nav ul.show {
   }
 
   .logo-brand ul {
-    padding-top: 25px;
-    padding-right: 25px;
-    justify-content: center;
+    padding-top: 15px;
+    padding-right: 15px;
+    /* justify-content: center; */
+    display: flex;
+    margin: auto;
   }
 
-  .logo
-  {
-    /* display: flex; */
-    float: left;
-    margin: 15px;
-  }
 }
 /* color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1)); */
