--- a/src/components/blog/myblog/mininavbar.css
+++ b/src/components/blog/myblog/mininavbar.css
@@ -4,17 +4,19 @@
     gap: 5px;
 }
 
-.status_info {
+/* .status_info {
     text-decoration: none;
-    /* color: #333; */
+
     font-weight: bold;
     padding: 10px 15px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-}
+} */
 
 .status_info:hover {
-    background-color: #f0f0f0;
+    background-color: var(--primary-color);
+    color: var(--forth-color);
+    border-radius: 15px;
 }
 
 @media screen and (max-width: 768px) {
